phonegap/www/css/index.css
/*
 * wood_pattern.png from subtlepatterns.com (awesome site)
 * overflow hidden hides the scroll bar
 * player icons by Ivan Boyko https://www.iconfinder.com/iconsets/users-android-l-lollipop
 */
body{
  overflow:hidden;
}
a{
  text-decoration: none;
}
.text-resize{
  position:absolute;
  top:10000px;
  left:10000px;
  font-size:1px;
}
.sizer{
  float:left;
  position:relative;
  font-size:1px;
  top:50%;
  transform: translateY(-50%);
}
.menu-float{
  max-width:240px;
  max-height:240px;
  display: inline-block;
  margin:5px;
  background-size:contain;
}
.menu{
  background-image:url("../img/wood_pattern.png");
  height:100%;
}
.title{
  margin-top:10px;
  margin-left:5px;
  margin-right:5px;
  margin-bottom:3%;
  background-image:url("../img/logo.png");
  background-repeat:no-repeat;
  background-size:contain;
  background-position:center;
  width:auto;
  height:30%;
}
/*
 * scoreboard contains score and logo
 * width and height are changed by JS on page load
 */
.score-board{
  width:100%;
  height:60%;
  position:fixed;
  z-index:2;
  max-height:200px;
  max-width:400px;
  opacity:.6;
}
/*
 * top score shows up on the left or top side of the screen
 * bottom score shows up on the right side, and disappears in portrait mode
 */
.top-score{
  left:10px;
  top:10px;
  background-color:white;
}
.bottom-score{
  right:10px;
  top:10px;
  background-color:black;
  color:white;
}
.logo{
  width:50%;
  position:relative;
  float:left;
  height:100%;
}
.score{
  height:100%;
  width:50%;
  position:relative;
  float:left;
}
.ones, .tens{
  float:left;
  position:relative;
  font-size:1px;
  top:50%;
  transform: translateY(-50%);
}
/*
 * contains all the game-board, everything else is fixed around it
 */
.game-board{
  background-image:url("../img/wood_pattern.png");
  padding:10px;
  position:relative;
}
/*
 * columns (resized on page load)
 */
.board-file{
  background-color:transparent;
  height:100%;
  width:50px;
  margin:auto;
  position:relative;
  display: inline-block;
}
/*
 * rows (squares within columns)
 * border-box calculates width including the border
 * perspective controls intensity of disc flips
 */
.board-rank{
  width:100%;
  height:50px;
  background-color:white;
  opacity:.6;
  border-style:solid;
  border-color:grey;
  border-width:2px;
  box-sizing:border-box;
  perspective:800px;
  position:relative;
}
/*
 * disc has a front and back and flips depending on control
 * preserve-3d inherits 3d settings from parent
 * transform-origin give the flip a more rotational look
 * transition specifies the length of time
 */
.disc{
  width:100%;
  height:100%;
  position:absolute;
  transform-style: preserve-3d;
  transform-origin: right center;
  transition: transform 800ms;
}
/*
 * flipped is toggled in the JS to flip the disc
 */
.disc.flipped{
  transform: translateX( -100% ) rotateY(180deg);
}
/*
 * the sides of the disc... back-face vis hides the back side
 */
.disc div{
  margin:0;
  width:100%;
  position:absolute;
  height:100%;
  display:block;
  backface-visibility: hidden;
}
.back{
  transform: rotateY( 180deg );
}
.back-btn{
  position:fixed;
  bottom:10px;
  right:0px;
}
.settings-btn{
  position:fixed;
  bottom:10px;
  left:0px;
}
/*
 * custom alert, the background color allows it to be clear but have
 * fully colored text
 */
.alert{
  position:absolute;
  left:50%;
  top:50%;
  margin-top:-75px;
  margin-left:-150px;
  width:300px;
  height:100px;
  border-radius:5px;
  background-color:rgba(255,255,255,0.9);
}
.alert-message{
  color:black;
  padding-top:20px;
  width:100%;
}
/*
 * all the select nones make it so the button isn't selectable... ask
 * tyler why he cares about this so much
 */
.ok-btn{
  padding-top:10px;
  border-bottom-left-radius:5px;
  border-bottom-right-radius:5px;
  padding-bottom:10px;
  position:absolute;
  bottom:0;
  width:100%;
  -webkit-touch-callout: none;
	-webkit-user-select: none;
	-khtml-user-select: none;
	-moz-user-select: none;
	-ms-user-select: none;
	user-select: none;
  background-color:rgba(200,200,200,0.8);
}
.ok-btn:hover{
  background-color:rgba(200,200,200,1);
}

